--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "messagebird": "^3.7.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
