--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node servidor/servidor.js",
     "test": "mocha servidor/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "16.14.0"
